# libstock

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: rust-check-fmt.yml  rust-clippy.yml  rust-compile-and-doc-test.yml  rust-compile-and-test.yml  rust-doc-check.yml  rust-doc-test.yml
benches/: bbo_ser_des.rs  orderbook_ser_des.rs
examples/: bbo_serialize.rs  concept_struct.rs  orderbook_serialize.rs  writer_production_test.rs
scripts/: ci_install_nanomsg.sh  get_available_features.py  list_all_possible_features.py
src/: compat.rs  data.rs  file.rs  flag.rs  lib.rs  message.rs  msg.rs  notice.rs  slack.rs
src/data/: bbo.rs  fields.rs  funding_rate.rs  hex.rs  kline.rs  num.rs  order.rs  orderbook.rs  serializer.rs  structure.rs  trade.rs  types.rs
src/data/fields/: abstracts.rs  bimap.rs  decimal.rs  eod_flag.rs  exchange_type.rs  info_type.rs  kline_indicators.rs  market_type.rs  message_type.rs  period.rs  price_data.rs  symbol_pair.rs  timestamp.rs  trade_side.rs
src/data/num/: decimal_dec.rs  decimal_enc.rs  test_utils.rs  timestamp.rs
src/file/: datadir.rs  ident.rs  monitor.rs  reader.rs  timestamp.rs  write.rs  writer.rs
src/message/: nanomsg.rs  traits.rs  zeromq.rs
src/message/nanomsg/: common.rs  publisher.rs  subscriber.rs
src/message/zeromq/: common.rs  publisher.rs  subscriber.rs
