[package]
name = "wmjtyd-libstock"
description = "The utilities for operating stocks"
authors = ["pan93412"]
version = "0.4.0-dev"
edition = "2021"
readme = "./README.md"
license = "Apache-2.0"
keywords = ["stock", "utility", "wmjtyd"]
repository = "https://github.com/wmjtyd/libstock"
documentation = "https://docs.rs/wmjtyd-libstock"
homepage = "https://github.com/wmjtyd/libstock"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayref = "0.3.6"
bimap = "0.6.2"
chrono = "0.4.19"
concat-string = "1.0.1"
either = "1.7.0"
flume = "0.10.13"
once_cell = "1.13.0"
rust_decimal = "1.25.0"
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0.31"
tokio = { version = "1.19.2", features = ["fs", "io-util", "rt"] }
tracing = "0.1.35"
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }
slack-hook = { version = "0.8.0", optional = true }
nanomsg = { version = "0.7.2", optional = true }
derive_builder = "0.11.2"
zeromq = { version = "0.3.3", optional = true }
async-trait = "0.1.56"
typed-builder = "0.10.0"

[dependencies.crypto-message]
version = "=1.0.2"
optional = true
git = "https://github.com/wmjtyd/crypto-crawler-rs"
rev = "8914b2855b87397f82a14507a20a2094c1ab7891"

[dependencies.crypto-market-type]
version = "=1.1.1"
optional = true
git = "https://github.com/wmjtyd/crypto-crawler-rs"
rev = "9c7cda9ab90c900c014566f9d279bef822cc37f1"

[dependencies.crypto-msg-type]
version = "=1.0.8"
optional = true
git = "https://github.com/wmjtyd/crypto-crawler-rs"
rev = "9c7cda9ab90c900c014566f9d279bef822cc37f1"

[features]
default = ["crypto", "message", "slack"]
crypto = ["dep:crypto-msg-type", "dep:crypto-market-type", "dep:crypto-message"]
message = ["nanomsg", "zeromq"]
nanomsg = ["dep:nanomsg"]
zeromq = ["dep:zeromq"]
slack = ["dep:slack-hook"]

[dev-dependencies]
tracing-subscriber = "0.3.14"
tokio = { version = "1.19.2", features = ["time", "rt", "rt-multi-thread", "macros"] }
anyhow = "1.0.58"
