[package]
name = "wmjtyd-libstock"
description = "The utilities for operating stocks"
authors = ["pan93412"]
version = "0.4.0-pre.2"
edition = "2021"
readme = "./README.md"
license = "Apache-2.0"
keywords = ["stock", "utility", "wmjtyd"]
repository = "https://github.com/wmjtyd/libstock"
documentation = "https://docs.rs/wmjtyd-libstock"
homepage = "https://github.com/wmjtyd/libstock"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayref = "0.3.6"
bimap = "0.6.2"
chrono = "0.4.22"
concat-string = "1.0.1"
crypto-market-type = { version = "1.1.3", optional = true }
crypto-message = { version = "1.1.13", optional = true }
crypto-msg-type = { version = "1.0.10", optional = true }
derive_builder = "0.11.2"
either = "1.8.0"
flume = "0.10.14"
futures = "0.3.23"
nanomsg = { version = "0.7.2", optional = true }
once_cell = "1.13.1"
rust_decimal = "1.26.1"
slack-hook = { version = "0.8.0", optional = true }
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0.32"
tokio = { version = "1.20.1", features = ["fs", "io-util", "rt"] }
tracing = "0.1.36"
typed-builder = "0.10.0"
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }
zmq2 = { version = "0.5.0", optional = true }

[features]
default = ["crypto", "message", "slack"]
crypto = ["dep:crypto-msg-type", "dep:crypto-market-type", "dep:crypto-message"]
message = ["nanomsg", "zeromq"]
nanomsg = ["dep:nanomsg"]
zeromq = ["dep:zmq2"]
slack = ["dep:slack-hook"]

# <!> Will be removed in the future release!
compat-v0_3 = []

[dev-dependencies]
anyhow = "1.0.62"
criterion = "0.3.6"
rust_decimal_macros = "1.26.1"
tokio = { version = "1.20.1", features = ["time", "rt", "rt-multi-thread", "macros"] }
tracing-subscriber = "0.3.15"

[[bench]]
name = "bbo_ser_des"
harness = false

[[bench]]
name = "orderbook_ser_des"
harness = false

[[example]]
name = "bbo_serialize"
required-features = ["crypto"]

[[example]]
name = "orderbook_serialize"
required-features = ["crypto"]

[profile.release]
lto = "fat"
codegen-units = 1
